--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,9 +20,16 @@ font-size: 16px;
 background: var(--light-color);
 margin: 20px;
 }
- 
+li{
+    list-style: none;
+    margin-left:5px;
+} 
+
 ul {
-list-style: none;
+    list-style: none;
+    height: 60%;
+    width:100%;
+    overflow: auto;
 }
  
 a {
